PLT-7392 - Fixing scrollbar in admin console

--- a/webapp/sass/routes/_admin-console.scss
+++ b/webapp/sass/routes/_admin-console.scss
@@ -357,7 +357,7 @@
     .nav-pills__container {
         @include font-smoothing(initial);
         background: #111;
-        height: calc(100% - 50px);
+        height: calc(100% - 68px);
         margin-top: 1px;
         padding-bottom: 20px;
         position: relative;
